--- a/spec/fixtures/vcr_cassettes/api/campaign/trigger_custom_event_1.yml
+++ b/spec/fixtures/vcr_cassettes/api/campaign/trigger_custom_event_1.yml
@@ -7,10 +7,53 @@ http_interactions:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
-        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>zhCE1Tdc0UhcA8pcvIwterF7MK</sessionId></sessionHeader></env:Header><env:Body><tns:triggerCustomEvent><tns:customEvent><tns:eventName>rspec_event1</tns:eventName><tns:eventId></tns:eventId><tns:eventStringDataMapping></tns:eventStringDataMapping><tns:eventDateDataMapping></tns:eventDateDataMapping><tns:eventNumberDataMapping></tns:eventNumberDataMapping></tns:customEvent><tns:recipientData><tns:recipient><tns:listName><tns:folderName>rspec_tests</tns:folderName><tns:objectName>rspec_list1</tns:objectName></tns:listName><tns:recipientId>0</tns:recipientId><tns:customerId></tns:customerId><tns:emailAddress>user1@email.com</tns:emailAddress><tns:mobileNumber></tns:mobileNumber><tns:emailFormat>NO_FORMAT</tns:emailFormat></tns:recipient><tns:optionalData><tns:name></tns:name><tns:value></tns:value></tns:optionalData></tns:recipientData></tns:triggerCustomEvent></env:Body></env:Envelope>
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Body><tns:login><tns:username>your_responsys_username</tns:username><tns:password>your_responsys_password</tns:password></tns:login></env:Body></env:Envelope>
+    headers:
+      Soapaction:
+      - '"login"'
+      Content-Type:
+      - text/xml;charset=UTF-8
+      Content-Length:
+      - '377'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Length:
+      - '283'
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Date:
+      - Wed, 26 Nov 2014 00:58:01 GMT
+      Server:
+      - Apache
+      Set-Cookie:
+      - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
+      - JSESSIONID=0563D1EC97072C12706412E2D0C147FA.ws03-ri5; Path=/; HttpOnly
+    body:
+      encoding: UTF-8
+      string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><loginResponse
+        xmlns="urn:ws.rsys.com"><result><sessionId>Y92I5sJ9R2HraDyImOPg8oYpqg</sessionId></result></loginResponse></soapenv:Body></soapenv:Envelope>
+    http_version: 
+  recorded_at: Wed, 26 Nov 2014 00:58:01 GMT
+- request:
+    method: post
+    uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
+    body:
+      encoding: UTF-8
+      string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>Y92I5sJ9R2HraDyImOPg8oYpqg</sessionId></sessionHeader></env:Header><env:Body><tns:triggerCustomEvent><tns:customEvent><tns:eventName>rspec_event1</tns:eventName><tns:eventId></tns:eventId><tns:eventStringDataMapping></tns:eventStringDataMapping><tns:eventDateDataMapping></tns:eventDateDataMapping><tns:eventNumberDataMapping></tns:eventNumberDataMapping></tns:customEvent><tns:recipientData><tns:recipient><tns:listName><tns:folderName>rspec_tests</tns:folderName><tns:objectName>rspec_list1</tns:objectName></tns:listName><tns:recipientId>0</tns:recipientId><tns:customerId></tns:customerId><tns:emailAddress>user1@email.com</tns:emailAddress><tns:mobileNumber></tns:mobileNumber><tns:emailFormat>NO_FORMAT</tns:emailFormat></tns:recipient><tns:optionalData><tns:name></tns:name><tns:value></tns:value></tns:optionalData></tns:recipientData></tns:triggerCustomEvent></env:Body></env:Envelope>
     headers:
       Cookie:
-      - JSESSIONID=0C8539AD888A36D0E56CE1E8C148C822.ws03-ri5
+      - JSESSIONID=0563D1EC97072C12706412E2D0C147FA.ws03-ri5
       Soapaction:
       - '"triggerCustomEvent"'
       Content-Type:
@@ -20,7 +63,7 @@ http_interactions:
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
   response:
@@ -33,7 +76,7 @@ http_interactions:
       Content-Type:
       - text/xml; charset=UTF-8
       Date:
-      - Thu, 13 Nov 2014 23:26:12 GMT
+      - Wed, 26 Nov 2014 00:58:01 GMT
       Server:
       - Apache
       Set-Cookie:
@@ -44,5 +87,49 @@ http_interactions:
         xmlns="urn:ws.rsys.com"><result><recipientId>48614925</recipientId><success>true</success><errorMessage
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:nil="1" /></result></triggerCustomEventResponse></soapenv:Body></soapenv:Envelope>
     http_version: 
-  recorded_at: Thu, 13 Nov 2014 23:26:12 GMT
-recorded_with: VCR 2.9.2
+  recorded_at: Wed, 26 Nov 2014 00:58:01 GMT
+- request:
+    method: post
+    uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
+    body:
+      encoding: UTF-8
+      string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>Y92I5sJ9R2HraDyImOPg8oYpqg</sessionId></sessionHeader></env:Header><env:Body><tns:logout></tns:logout></env:Body></env:Envelope>
+    headers:
+      Cookie:
+      - JSESSIONID=0563D1EC97072C12706412E2D0C147FA.ws03-ri5
+      Soapaction:
+      - '"logout"'
+      Content-Type:
+      - text/xml;charset=UTF-8
+      Content-Length:
+      - '399'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Length:
+      - '240'
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Date:
+      - Wed, 26 Nov 2014 00:58:01 GMT
+      Server:
+      - Apache
+      Set-Cookie:
+      - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
+    body:
+      encoding: UTF-8
+      string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><logoutResponse
+        xmlns="urn:ws.rsys.com"><result>true</result></logoutResponse></soapenv:Body></soapenv:Envelope>
+    http_version: 
+  recorded_at: Wed, 26 Nov 2014 00:58:01 GMT
+recorded_with: VCR 2.9.3
