--- a/spec/fixtures/vcr_cassettes/api/list/retrieve_single.yml
+++ b/spec/fixtures/vcr_cassettes/api/list/retrieve_single.yml
@@ -4,21 +4,66 @@ http_interactions:
     method: post
     uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
-        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>EcDzcMqpY504CFUmPeekSEYQF0</sessionId></sessionHeader></env:Header><env:Body><tns:retrieveListMembers><tns:list><tns:folderName>rspec_tests</tns:folderName><tns:objectName>rspec_list1</tns:objectName></tns:list><tns:queryColumn>EMAIL_ADDRESS</tns:queryColumn><tns:fieldList>EMAIL_ADDRESS_</tns:fieldList><tns:fieldList>MOBILE_NUMBER_</tns:fieldList><tns:idsToRetrieve>user1@email.com</tns:idsToRetrieve></tns:retrieveListMembers></env:Body></env:Envelope>
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Body><tns:login><tns:username>your_responsys_username</tns:username><tns:password>your_responsys_password</tns:password></tns:login></env:Body></env:Envelope>
+    headers:
+      Soapaction:
+      - '"login"'
+      Content-Type:
+      - text/xml;charset=UTF-8
+      Content-Length:
+      - '377'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Length:
+      - '283'
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Date:
+      - Wed, 26 Nov 2014 00:58:01 GMT
+      Server:
+      - Apache
+      Set-Cookie:
+      - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
+      - JSESSIONID=7C2842007A7A9EB57EE71E3B1CFE7FE6.ws02-ri5; Path=/; HttpOnly
+    body:
+      encoding: UTF-8
+      string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><loginResponse
+        xmlns="urn:ws.rsys.com"><result><sessionId>czsKVTfypDSdVnFs9UhVZJKWuv</sessionId></result></loginResponse></soapenv:Body></soapenv:Envelope>
+    http_version: 
+  recorded_at: Wed, 26 Nov 2014 00:58:01 GMT
+- request:
+    method: post
+    uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
+    body:
+      encoding: UTF-8
+      string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>czsKVTfypDSdVnFs9UhVZJKWuv</sessionId></sessionHeader></env:Header><env:Body><tns:retrieveListMembers><tns:list><tns:folderName>rspec_tests</tns:folderName><tns:objectName>rspec_list1</tns:objectName></tns:list><tns:queryColumn>EMAIL_ADDRESS</tns:queryColumn><tns:fieldList>EMAIL_ADDRESS_</tns:fieldList><tns:fieldList>MOBILE_NUMBER_</tns:fieldList><tns:idsToRetrieve>user1@email.com</tns:idsToRetrieve></tns:retrieveListMembers></env:Body></env:Envelope>
     headers:
       Cookie:
-      - JSESSIONID=F947927F6DDACEB0F2EE11A94DD881B2.ws03-ri5
+      - JSESSIONID=7C2842007A7A9EB57EE71E3B1CFE7FE6.ws02-ri5
       Soapaction:
-      - ! '"retrieveListMembers"'
+      - '"retrieveListMembers"'
       Content-Type:
       - text/xml;charset=UTF-8
       Content-Length:
       - '726'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - ! '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
   response:
@@ -31,15 +76,59 @@ http_interactions:
       Content-Type:
       - text/xml; charset=UTF-8
       Date:
-      - Thu, 06 Nov 2014 07:07:40 GMT
+      - Wed, 26 Nov 2014 00:58:01 GMT
       Server:
       - Apache
       Set-Cookie:
       - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><retrieveListMembersResponse
         xmlns="urn:ws.rsys.com"><result><recordData><fieldNames>EMAIL_ADDRESS_</fieldNames><fieldNames>MOBILE_NUMBER_</fieldNames><records><fieldValues>user1@email.com</fieldValues><fieldValues>0000000001</fieldValues></records></recordData></result></retrieveListMembersResponse></soapenv:Body></soapenv:Envelope>
     http_version: 
-  recorded_at: Thu, 06 Nov 2014 07:07:42 GMT
+  recorded_at: Wed, 26 Nov 2014 00:58:02 GMT
+- request:
+    method: post
+    uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
+    body:
+      encoding: UTF-8
+      string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>czsKVTfypDSdVnFs9UhVZJKWuv</sessionId></sessionHeader></env:Header><env:Body><tns:logout></tns:logout></env:Body></env:Envelope>
+    headers:
+      Cookie:
+      - JSESSIONID=7C2842007A7A9EB57EE71E3B1CFE7FE6.ws02-ri5
+      Soapaction:
+      - '"logout"'
+      Content-Type:
+      - text/xml;charset=UTF-8
+      Content-Length:
+      - '399'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Length:
+      - '240'
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Date:
+      - Wed, 26 Nov 2014 00:58:01 GMT
+      Server:
+      - Apache
+      Set-Cookie:
+      - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
+    body:
+      encoding: UTF-8
+      string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><logoutResponse
+        xmlns="urn:ws.rsys.com"><result>true</result></logoutResponse></soapenv:Body></soapenv:Envelope>
+    http_version: 
+  recorded_at: Wed, 26 Nov 2014 00:58:02 GMT
 recorded_with: VCR 2.9.3
