--- a/spec/fixtures/vcr_cassettes/api/table/delete_with_pk.yml
+++ b/spec/fixtures/vcr_cassettes/api/table/delete_with_pk.yml
@@ -4,21 +4,66 @@ http_interactions:
     method: post
     uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
-        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>Umup1zvQo5WaiMnjCDYmjVkIB9</sessionId></sessionHeader></env:Header><env:Body><tns:deleteTable><tns:table><tns:folderName>rspec_tests</tns:folderName><tns:objectName>table_with_pk_1415258811</tns:objectName></tns:table></tns:deleteTable></env:Body></env:Envelope>
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Body><tns:login><tns:username>your_responsys_username</tns:username><tns:password>your_responsys_password</tns:password></tns:login></env:Body></env:Envelope>
+    headers:
+      Soapaction:
+      - '"login"'
+      Content-Type:
+      - text/xml;charset=UTF-8
+      Content-Length:
+      - '377'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Length:
+      - '283'
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Date:
+      - Wed, 26 Nov 2014 00:58:02 GMT
+      Server:
+      - Apache
+      Set-Cookie:
+      - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
+      - JSESSIONID=21F76AF4EC2705E1914B076FBE732BBB.ws04-ri5; Path=/; HttpOnly
+    body:
+      encoding: UTF-8
+      string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><loginResponse
+        xmlns="urn:ws.rsys.com"><result><sessionId>g731BqvKNPGEEs5EOuFAlFJCoX</sessionId></result></loginResponse></soapenv:Body></soapenv:Envelope>
+    http_version: 
+  recorded_at: Wed, 26 Nov 2014 00:58:02 GMT
+- request:
+    method: post
+    uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
+    body:
+      encoding: UTF-8
+      string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>g731BqvKNPGEEs5EOuFAlFJCoX</sessionId></sessionHeader></env:Header><env:Body><tns:deleteTable><tns:table><tns:folderName>rspec_tests</tns:folderName><tns:objectName>table_with_pk_1416963482</tns:objectName></tns:table></tns:deleteTable></env:Body></env:Envelope>
     headers:
       Cookie:
-      - JSESSIONID=F8A25AFB55405F63A61248977DF25F9F.ws01-ri5
+      - JSESSIONID=21F76AF4EC2705E1914B076FBE732BBB.ws04-ri5
       Soapaction:
-      - ! '"deleteTable"'
+      - '"deleteTable"'
       Content-Type:
       - text/xml;charset=UTF-8
       Content-Length:
       - '533'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - ! '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
   response:
@@ -31,15 +76,59 @@ http_interactions:
       Content-Type:
       - text/xml; charset=UTF-8
       Date:
-      - Thu, 06 Nov 2014 07:26:50 GMT
+      - Wed, 26 Nov 2014 00:58:02 GMT
       Server:
       - Apache
       Set-Cookie:
       - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><deleteTableResponse
         xmlns="urn:ws.rsys.com"><result>true</result></deleteTableResponse></soapenv:Body></soapenv:Envelope>
     http_version: 
-  recorded_at: Thu, 06 Nov 2014 07:26:52 GMT
+  recorded_at: Wed, 26 Nov 2014 00:58:02 GMT
+- request:
+    method: post
+    uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
+    body:
+      encoding: UTF-8
+      string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>g731BqvKNPGEEs5EOuFAlFJCoX</sessionId></sessionHeader></env:Header><env:Body><tns:logout></tns:logout></env:Body></env:Envelope>
+    headers:
+      Cookie:
+      - JSESSIONID=21F76AF4EC2705E1914B076FBE732BBB.ws04-ri5
+      Soapaction:
+      - '"logout"'
+      Content-Type:
+      - text/xml;charset=UTF-8
+      Content-Length:
+      - '399'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Length:
+      - '240'
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Date:
+      - Wed, 26 Nov 2014 00:58:02 GMT
+      Server:
+      - Apache
+      Set-Cookie:
+      - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
+    body:
+      encoding: UTF-8
+      string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><logoutResponse
+        xmlns="urn:ws.rsys.com"><result>true</result></logoutResponse></soapenv:Body></soapenv:Envelope>
+    http_version: 
+  recorded_at: Wed, 26 Nov 2014 00:58:02 GMT
 recorded_with: VCR 2.9.3
