--- a/spec/fixtures/vcr_cassettes/member/retrieve_profile_extension.yml
+++ b/spec/fixtures/vcr_cassettes/member/retrieve_profile_extension.yml
@@ -4,21 +4,66 @@ http_interactions:
     method: post
     uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
-        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>W1Qlwgd2Ysd7WOrfV45ddioFyh</sessionId></sessionHeader></env:Header><env:Body><tns:retrieveProfileExtensionRecords><tns:profileExtension><tns:folderName>rspec_tests</tns:folderName><tns:objectName>rspec_pet1</tns:objectName></tns:profileExtension><tns:queryColumn>RIID</tns:queryColumn><tns:fieldList>RIID_</tns:fieldList><tns:idsToRetrieve>48614925</tns:idsToRetrieve></tns:retrieveProfileExtensionRecords></env:Body></env:Envelope>
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Body><tns:login><tns:username>your_responsys_username</tns:username><tns:password>your_responsys_password</tns:password></tns:login></env:Body></env:Envelope>
+    headers:
+      Soapaction:
+      - '"login"'
+      Content-Type:
+      - text/xml;charset=UTF-8
+      Content-Length:
+      - '377'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Length:
+      - '283'
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Date:
+      - Wed, 26 Nov 2014 00:58:04 GMT
+      Server:
+      - Apache
+      Set-Cookie:
+      - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
+      - JSESSIONID=CB8523ABABEA7562B52CE9281E45D4D2.ws04-ri5; Path=/; HttpOnly
+    body:
+      encoding: UTF-8
+      string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><loginResponse
+        xmlns="urn:ws.rsys.com"><result><sessionId>3fKZmI7wBxWmzeSAIre9F0vABa</sessionId></result></loginResponse></soapenv:Body></soapenv:Envelope>
+    http_version: 
+  recorded_at: Wed, 26 Nov 2014 00:58:04 GMT
+- request:
+    method: post
+    uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
+    body:
+      encoding: UTF-8
+      string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>3fKZmI7wBxWmzeSAIre9F0vABa</sessionId></sessionHeader></env:Header><env:Body><tns:retrieveProfileExtensionRecords><tns:profileExtension><tns:folderName>rspec_tests</tns:folderName><tns:objectName>rspec_pet1</tns:objectName></tns:profileExtension><tns:queryColumn>RIID</tns:queryColumn><tns:fieldList>RIID_</tns:fieldList><tns:idsToRetrieve>48614925</tns:idsToRetrieve></tns:retrieveProfileExtensionRecords></env:Body></env:Envelope>
     headers:
       Cookie:
-      - JSESSIONID=77DC067BAF16CCB4C50C44F50A95AE96.ws02-ri5
+      - JSESSIONID=CB8523ABABEA7562B52CE9281E45D4D2.ws04-ri5
       Soapaction:
-      - ! '"retrieveProfileExtensionRecords"'
+      - '"retrieveProfileExtensionRecords"'
       Content-Type:
       - text/xml;charset=UTF-8
       Content-Length:
       - '703'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - ! '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
   response:
@@ -31,36 +76,125 @@ http_interactions:
       Content-Type:
       - text/xml; charset=UTF-8
       Date:
-      - Thu, 06 Nov 2014 07:37:18 GMT
+      - Wed, 26 Nov 2014 00:58:04 GMT
       Server:
       - Apache
       Set-Cookie:
       - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><retrieveProfileExtensionRecordsResponse
         xmlns="urn:ws.rsys.com"><result><recordData><fieldNames>RIID_</fieldNames><records><fieldValues>48614925</fieldValues></records></recordData></result></retrieveProfileExtensionRecordsResponse></soapenv:Body></soapenv:Envelope>
     http_version: 
-  recorded_at: Thu, 06 Nov 2014 07:37:20 GMT
+  recorded_at: Wed, 26 Nov 2014 00:58:04 GMT
 - request:
     method: post
     uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
-        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>W1Qlwgd2Ysd7WOrfV45ddioFyh</sessionId></sessionHeader></env:Header><env:Body><tns:retrieveProfileExtensionRecords><tns:profileExtension><tns:folderName>rspec_tests</tns:folderName><tns:objectName>rspec_pet1</tns:objectName></tns:profileExtension><tns:queryColumn>RIID</tns:queryColumn><tns:fieldList>RIID_</tns:fieldList><tns:fieldList>MONTHLY_PURCH</tns:fieldList><tns:idsToRetrieve>48614925</tns:idsToRetrieve></tns:retrieveProfileExtensionRecords></env:Body></env:Envelope>
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>3fKZmI7wBxWmzeSAIre9F0vABa</sessionId></sessionHeader></env:Header><env:Body><tns:logout></tns:logout></env:Body></env:Envelope>
     headers:
       Cookie:
-      - JSESSIONID=77DC067BAF16CCB4C50C44F50A95AE96.ws02-ri5
+      - JSESSIONID=CB8523ABABEA7562B52CE9281E45D4D2.ws04-ri5
       Soapaction:
-      - ! '"retrieveProfileExtensionRecords"'
+      - '"logout"'
+      Content-Type:
+      - text/xml;charset=UTF-8
+      Content-Length:
+      - '399'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Length:
+      - '240'
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Date:
+      - Wed, 26 Nov 2014 00:58:04 GMT
+      Server:
+      - Apache
+      Set-Cookie:
+      - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
+    body:
+      encoding: UTF-8
+      string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><logoutResponse
+        xmlns="urn:ws.rsys.com"><result>true</result></logoutResponse></soapenv:Body></soapenv:Envelope>
+    http_version: 
+  recorded_at: Wed, 26 Nov 2014 00:58:04 GMT
+- request:
+    method: post
+    uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
+    body:
+      encoding: UTF-8
+      string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Body><tns:login><tns:username>your_responsys_username</tns:username><tns:password>your_responsys_password</tns:password></tns:login></env:Body></env:Envelope>
+    headers:
+      Soapaction:
+      - '"login"'
+      Content-Type:
+      - text/xml;charset=UTF-8
+      Content-Length:
+      - '377'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Length:
+      - '283'
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Date:
+      - Wed, 26 Nov 2014 00:58:04 GMT
+      Server:
+      - Apache
+      Set-Cookie:
+      - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
+      - JSESSIONID=433D2CF6CEE8F31555FB6819387816E3.ws03-ri5; Path=/; HttpOnly
+    body:
+      encoding: UTF-8
+      string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><loginResponse
+        xmlns="urn:ws.rsys.com"><result><sessionId>3wa2oVlITL7iNbPofvcsaie9hA</sessionId></result></loginResponse></soapenv:Body></soapenv:Envelope>
+    http_version: 
+  recorded_at: Wed, 26 Nov 2014 00:58:04 GMT
+- request:
+    method: post
+    uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
+    body:
+      encoding: UTF-8
+      string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>3wa2oVlITL7iNbPofvcsaie9hA</sessionId></sessionHeader></env:Header><env:Body><tns:retrieveProfileExtensionRecords><tns:profileExtension><tns:folderName>rspec_tests</tns:folderName><tns:objectName>rspec_pet1</tns:objectName></tns:profileExtension><tns:queryColumn>RIID</tns:queryColumn><tns:fieldList>RIID_</tns:fieldList><tns:fieldList>MONTHLY_PURCH</tns:fieldList><tns:idsToRetrieve>48614925</tns:idsToRetrieve></tns:retrieveProfileExtensionRecords></env:Body></env:Envelope>
+    headers:
+      Cookie:
+      - JSESSIONID=433D2CF6CEE8F31555FB6819387816E3.ws03-ri5
+      Soapaction:
+      - '"retrieveProfileExtensionRecords"'
       Content-Type:
       - text/xml;charset=UTF-8
       Content-Length:
       - '747'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - ! '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
   response:
@@ -73,15 +207,59 @@ http_interactions:
       Content-Type:
       - text/xml; charset=UTF-8
       Date:
-      - Thu, 06 Nov 2014 07:37:18 GMT
+      - Wed, 26 Nov 2014 00:58:04 GMT
       Server:
       - Apache
       Set-Cookie:
       - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
     body:
-      encoding: US-ASCII
+      encoding: UTF-8
       string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><retrieveProfileExtensionRecordsResponse
         xmlns="urn:ws.rsys.com"><result><recordData><fieldNames>RIID_</fieldNames><fieldNames>MONTHLY_PURCH</fieldNames><records><fieldValues>48614925</fieldValues><fieldValues>300</fieldValues></records></recordData></result></retrieveProfileExtensionRecordsResponse></soapenv:Body></soapenv:Envelope>
     http_version: 
-  recorded_at: Thu, 06 Nov 2014 07:37:20 GMT
+  recorded_at: Wed, 26 Nov 2014 00:58:04 GMT
+- request:
+    method: post
+    uri: https://ws5.responsys.net/webservices/services/ResponsysWSService
+    body:
+      encoding: UTF-8
+      string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="urn:ws.rsys.com"
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Header><sessionHeader><sessionId>3wa2oVlITL7iNbPofvcsaie9hA</sessionId></sessionHeader></env:Header><env:Body><tns:logout></tns:logout></env:Body></env:Envelope>
+    headers:
+      Cookie:
+      - JSESSIONID=433D2CF6CEE8F31555FB6819387816E3.ws03-ri5
+      Soapaction:
+      - '"logout"'
+      Content-Type:
+      - text/xml;charset=UTF-8
+      Content-Length:
+      - '399'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Length:
+      - '240'
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Date:
+      - Wed, 26 Nov 2014 00:58:04 GMT
+      Server:
+      - Apache
+      Set-Cookie:
+      - BIGipServerDC2-APIGEE-I5-9051-SSL=3600669706.23331.0000; path=/
+    body:
+      encoding: UTF-8
+      string: <?xml version='1.0' encoding='UTF-8'?><soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"><soapenv:Body><logoutResponse
+        xmlns="urn:ws.rsys.com"><result>true</result></logoutResponse></soapenv:Body></soapenv:Envelope>
+    http_version: 
+  recorded_at: Wed, 26 Nov 2014 00:58:04 GMT
 recorded_with: VCR 2.9.3
